CostalCloud/force-app/main/default/objects/Contact.object
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>