CostalCloud/force-app/main/default/objects/Contact/fields/Account_Owner_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_ID_18__c</fullName>
    <formula>Account.Owner.Case_Safe_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner ID (18)</label>
    <type>Text</type>
</CustomField>