CostalCloud/force-app/main/default/objects/Contact/fields/Background_Consent__c.field-meta.xml
<CustomField>
    <fullName>Background_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Background Consent</label>
    <type>Checkbox</type>
</CustomField>