CostalCloud/force-app/main/default/objects/Contact/fields/Badge_Photo__c.field-meta.xml
<CustomField>
    <fullName>Badge_Photo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Badge Photo</label>
    <type>Checkbox</type>
</CustomField>