CostalCloud/force-app/main/default/objects/Contact/fields/Certified_Renovator__c.field-meta.xml
<CustomField>
    <fullName>Certified_Renovator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified Renovator</label>
    <type>Checkbox</type>
</CustomField>