CostalCloud/force-app/main/default/objects/Contact/fields/Contact_Id_18__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id_18__c</fullName>
    <description>This formula will always evaluate to the 18 character case safe Salesforce Id. It should be used for integrations and data loads. Include this Id field on reports if those reports will be used for mass data updates.</description>
    <formula>CaseSafeId( Id )</formula>
    <inlineHelpText>Include this Id field on reports if those reports will be used for mass data updates.</inlineHelpText>
    <label>Contact Id (18)</label>
    <type>Text</type>
</CustomField>