CostalCloud/force-app/main/default/objects/Contact/fields/disco__Youreka_Form__c.field-meta.xml
<CustomField>
    <fullName>disco__Youreka_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Youreka Form</label>
    <referenceTo>disco__Form__c</referenceTo>
    <relationshipLabel>Youreka Contacts</relationshipLabel>
    <relationshipName>Youreka_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>