CostalCloud/force-app/main/default/objects/Contact/fields/Driver_License_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Driver_License_Documentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driver License Documentation</label>
    <type>Checkbox</type>
</CustomField>