CostalCloud/force-app/main/default/objects/Contact/fields/Edit__c.field-meta.xml
<CustomField>
    <fullName>Edit__c</fullName>
    <description>Used in Reporting to allow an Edit directly from the Report</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;/e?&quot;, &quot;Edit&quot;)</formula>
    <inlineHelpText>Used in Reporting to allow an Edit directly from the Report</inlineHelpText>
    <label>Edit</label>
    <type>Text</type>
</CustomField>