CostalCloud/force-app/main/default/objects/Contact/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>For use in Reports (as they will only list First Name and Last Name as 2 separate columns - when you may want to just see one column)</description>
    <formula>FirstName &amp;&quot; &quot;&amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>First Name and Last Name</inlineHelpText>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>