CostalCloud/force-app/main/default/objects/Contact/fields/HDC_User__c.field-meta.xml
<CustomField>
    <fullName>HDC_User__c</fullName>
    <inlineHelpText>Value sent to BDC from Integration</inlineHelpText>
    <label>HDC User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>