CostalCloud/force-app/main/default/objects/Contact/fields/Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Hobbies__c</fullName>
    <label>Hobbies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Baseball</fullName>
            </value>
            <value>
                <fullName>Basketball</fullName>
            </value>
            <value>
                <fullName>Biking</fullName>
            </value>
            <value>
                <fullName>Boating</fullName>
            </value>
            <value>
                <fullName>Cars (Collecting)</fullName>
            </value>
            <value>
                <fullName>Cars (Racing)</fullName>
            </value>
            <value>
                <fullName>Chess</fullName>
            </value>
            <value>
                <fullName>Cricket</fullName>
            </value>
            <value>
                <fullName>Flying</fullName>
            </value>
            <value>
                <fullName>Football</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>NASCAR</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Sailing</fullName>
            </value>
            <value>
                <fullName>Soaring</fullName>
            </value>
            <value>
                <fullName>Soccer</fullName>
            </value>
            <value>
                <fullName>Swimming</fullName>
            </value>
            <value>
                <fullName>Tennis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>