CostalCloud/force-app/main/default/objects/Contact/fields/Integration_Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key_Contact__c</fullName>
    <description>Integration ID / Key used to uniquely connect Salesforce.com to another system (e.g. ERP Financial system)</description>
    <externalId>true</externalId>
    <inlineHelpText>Integration ID / Key used to uniquely connect Salesforce.com to another system (e.g. ERP Financial system)</inlineHelpText>
    <label>Integration Key (Contact)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>