CostalCloud/force-app/main/default/objects/Contact/fields/Issue_with_Background_Consent__c.field-meta.xml
<CustomField>
    <fullName>Issue_with_Background_Consent__c</fullName>
    <label>Issue with Background Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>