CostalCloud/force-app/main/default/objects/Contact/fields/Issue_with_Badge_Photo__c.field-meta.xml
<CustomField>
    <fullName>Issue_with_Badge_Photo__c</fullName>
    <label>Issue with Badge Photo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>