CostalCloud/force-app/main/default/objects/Contact/fields/Issue_with_SSN_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Issue_with_SSN_Documentation__c</fullName>
    <label>Issue with SSN Documentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>