CostalCloud/force-app/main/default/objects/Contact/fields/Legacy_ID_Contact__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID_Contact__c</fullName>
    <description>Legacy ID / Key used to connect Salesforce.com to the system to which data initially originated - Used for a system that are no longer going to be used</description>
    <externalId>true</externalId>
    <inlineHelpText>Legacy ID / Key used to connect Salesforce.com to the system to which data initially originated</inlineHelpText>
    <label>Legacy ID (Contact)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>