CostalCloud/force-app/main/default/objects/Contact/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <formula>HYPERLINK( 
&quot;https://www.linkedin.com/search/results/all/?keywords=&quot;&amp;FirstName&amp;&quot; &quot;&amp;LastName&amp;&quot; &quot;&amp;Account.Name,
IMAGE(&quot;/resource/Image_LinkedIn&quot;,&quot;LinkedIn&quot;) 
)</formula>
    <inlineHelpText>Retrieves LinkedIn Search</inlineHelpText>
    <label>LinkedIn</label>
    <type>Text</type>
</CustomField>