CostalCloud/force-app/main/default/objects/Contact/fields/Note_Background_Consent__c.field-meta.xml
<CustomField>
    <fullName>Note_Background_Consent__c</fullName>
    <label>Note Background Consent</label>
    <type>TextArea</type>
</CustomField>