CostalCloud/force-app/main/default/objects/Contact/fields/Note_Badge_Photo__c.field-meta.xml
<CustomField>
    <fullName>Note_Badge_Photo__c</fullName>
    <label>Note Badge Photo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>