CostalCloud/force-app/main/default/objects/Contact/fields/Note_Certified_Renovator__c.field-meta.xml
<CustomField>
    <fullName>Note_Certified_Renovator__c</fullName>
    <label>Note Certified Renovator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>