CostalCloud/force-app/main/default/objects/Contact/fields/Note_Driver_License_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Note_Driver_License_Documentation__c</fullName>
    <label>Note Driver License Documentation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>