CostalCloud/force-app/main/default/objects/Contact/fields/Note_Skills_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Note_Skills_Assessment__c</fullName>
    <label>Note Skills Assessment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>