CostalCloud/force-app/main/default/objects/Contact/fields/Note_SSN_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Note_SSN_Documentation__c</fullName>
    <label>Note SSN Documentation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>