CostalCloud/force-app/main/default/objects/Contact/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <label>Photo</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>