CostalCloud/force-app/main/default/objects/Contact/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COS</fullName>
            </value>
            <value>
                <fullName>Kitchen Designer</fullName>
            </value>
            <value>
                <fullName>SASM</fullName>
            </value>
            <value>
                <fullName>Store Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>