CostalCloud/force-app/main/default/objects/Contact/fields/Received_Background_Consent__c.field-meta.xml
<CustomField>
    <fullName>Received_Background_Consent__c</fullName>
    <label>Received Background Consent</label>
    <type>Date</type>
</CustomField>