CostalCloud/force-app/main/default/objects/Contact/fields/Received_Badge_Photo__c.field-meta.xml
<CustomField>
    <fullName>Received_Badge_Photo__c</fullName>
    <label>Received Badge Photo</label>
    <type>Date</type>
</CustomField>