CostalCloud/force-app/main/default/objects/Contact/fields/Received_Certified_Renovator__c.field-meta.xml
<CustomField>
    <fullName>Received_Certified_Renovator__c</fullName>
    <label>Received Certified Renovator</label>
    <type>Date</type>
</CustomField>