CostalCloud/force-app/main/default/objects/Contact/fields/Received_Driver_License_Document__c.field-meta.xml
<CustomField>
    <fullName>Received_Driver_License_Document__c</fullName>
    <label>Received Driver License Document</label>
    <type>Date</type>
</CustomField>