CostalCloud/force-app/main/default/objects/Contact/fields/Received_Skills_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Received_Skills_Assessment__c</fullName>
    <label>Received Skills Assessment</label>
    <type>Date</type>
</CustomField>