CostalCloud/force-app/main/default/objects/Contact/fields/Received_SSN_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Received_SSN_Documentation__c</fullName>
    <label>Received SSN Documentation</label>
    <type>Date</type>
</CustomField>