CostalCloud/force-app/main/default/objects/Contact/fields/Skills_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Skills_Assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skills Assessment</label>
    <type>Checkbox</type>
</CustomField>