CostalCloud/force-app/main/default/objects/Contact/fields/SSN_Documentation__c.field-meta.xml
<CustomField>
    <fullName>SSN_Documentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSN Documentation</label>
    <type>Checkbox</type>
</CustomField>