CostalCloud/force-app/main/default/objects/Contact/fields/Tenure_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Tenure_End_Date__c</fullName>
    <description>End Date of Employment</description>
    <inlineHelpText>End Date of Employment</inlineHelpText>
    <label>Tenure (End Date)</label>
    <type>Date</type>
</CustomField>