CostalCloud/force-app/main/default/objects/Contact/fields/Tenure_Months__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Months__c</fullName>
    <description>Tenure with the Company in Months</description>
    <formula>IF( 
ISBLANK (Tenure_End_Date__c) , 
(Today()- Tenure_Start_Date__c)/30.4, 
(Tenure_End_Date__c - Tenure_Start_Date__c)/30.4
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tenure with the Company in Months</inlineHelpText>
    <label>Tenure (Months)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>