CostalCloud/force-app/main/default/objects/Contact/fields/Tenure_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Start_Date__c</fullName>
    <description>Start Date of Employment</description>
    <inlineHelpText>Start Date of Employment</inlineHelpText>
    <label>Tenure (Start Date)</label>
    <type>Date</type>
</CustomField>