CostalCloud/force-app/main/default/objects/Contact/fields/Tenure_Years__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Years__c</fullName>
    <description>Tenure with the Company in Years</description>
    <formula>IF( 
ISBLANK (Tenure_End_Date__c) , 
(Today()- Tenure_Start_Date__c)/365, 
(Tenure_End_Date__c - Tenure_Start_Date__c)/365
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tenure with the Company in Years</inlineHelpText>
    <label>Tenure (Years)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>