CostalCloud/force-app/main/default/objects/Contact/fields/Unit_Contact__c.field-meta.xml
<CustomField>
    <fullName>Unit_Contact__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Used ONLY in Reporting - For each Contact it will default to &quot;1&quot; for the purpose of Summing Contacts. This can be done organically within Salesforce except when you the Report is attempting to Sum TWO Objects (# of Accounts AND # of Contacts) of which &quot;Record Count&quot; only allows ONE to be Summed.</description>
    <inlineHelpText>Used ONLY in Reporting - For each Contact it will default to &quot;1&quot; for the purpose of Summing Contacts. When the Report is attempting to Sum TWO Objects (# of Accounts AND # of Contacts) of which &quot;Record Count&quot; only allows ONE to be Summed.</inlineHelpText>
    <label>Unit (Contact)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>