CostalCloud/force-app/main/default/objects/Contact/recordTypes/Installer.recordType-meta.xml
<RecordType>
    <fullName>Installer</fullName>
    <active>true</active>
    <label>Installer</label>
</RecordType>